[gd_scene load_steps=3 format=3 uid="uid://460412mt4ky1"]

[ext_resource type="Script" path="res://Scripts/CollisionDamage.gd" id="1_nteuc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qdwfo"]
size = Vector2(8, 8)

[node name="CollisionDamage" type="Node2D"]
script = ExtResource("1_nteuc")
damage = 42.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_qdwfo")

[node name="Timer" type="Timer" parent="Area2D"]
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Area2D/Timer" to="." method="_on_timer_timeout"]
